--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
 	<body class="hide-native-scroll-y">
 		<app>
 		</app>
-		<script src="/dll.vendors.js"></script>
+		<script src="dll.vendors.js"></script>
 	</body>
 </html>
