build(vendors): separa css num arquivo separado

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 				height: 100vh;
 			}
 		</style>
+		<link rel="stylesheet" href="dll.vendors.css">
 	</head>
 
 	<body class="hide-native-scroll-y">
